Replaced missing logo

--- a/preview/index.html
+++ b/preview/index.html
@@ -39,7 +39,7 @@
 
     <header class="wrapper wrapper__match-content pv-header">
         <div class="pv-logo">
-            <img class="pv-logo_img" src="static/img/logo.png" alt="CFPB logo">
+            <img class="pv-logo_img" src="/static/img/logo_sm-exec.png" alt="CFPB logo">
         </div>
         <nav class="pv-nav">
             <a href="#ux_container" class="pv-nav_link js-smooth-scroll">Organized</a>
