Small Business content updates
Capitalized page title (Small Businesses & Minorities) and capitalized the beginning of the linked sentence at the end of the intro text.

--- a/doing-business-with-us/small-businesses/index.html
+++ b/doing-business-with-us/small-businesses/index.html
@@ -25,14 +25,14 @@
 
 {% block content_main %}
 
-    <h1>Small businesses & minorities</h1>
+    <h1>Small Businesses & Minorities</h1>
     <p class="h3">
         We offer information here to help small, women-owned, and minority-owned businesses particpate in the
         procurement and award process. We also publish information about existing awards to Small Business
         Administration-designated business classes. We are dedicated to working with small business
         owners—particularly women, minorities, and service-disabled veterans—and we welcome feedback about how
         we're doing.
-        <a href="/budget/">see our budget and strategy</a>.
+        <a href="/budget/">See our strategy and budget</a>.
     </p>
 
     <div class="block content-l content-l__main">
