Deputy Director content updates
replaced Lorem in "more information" section, updated "request speaking info" section.

--- a/the-bureau/about-steve-antonakes/index.html
+++ b/the-bureau/about-steve-antonakes/index.html
@@ -72,7 +72,7 @@
             </div>
             <div class="content-l_col content-l_col-1-2">
                 <h1 class="h4 u-mb5">
-                    Request speaking info
+                    Request the deputy director's speaking info
                 </h1>
                 <a class="styled-link"
                    href="mailto:externalaffairs@cfpb.gov">
@@ -96,11 +96,11 @@
                         Newsroom
                     </h2>
                     <p class="short-desc">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.
+                        Get the latest CFPB news, including speeches, testimony and op-eds by the assistant director.
                     </p>
                     <a class="jump-link jump-link__right"
                        href="/newsroom/?filter_author=Steve+Antonakes">
-                        Read news about the deputy director
+                        See how our deputy director is making headlines
                     </a>
                 </div>
                 <div class="content-l_col content-l_col-1-3">
@@ -109,11 +109,11 @@
                         Blogs
                     </h2>
                     <p class="short-desc">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.
+                        Read blogs written by the deputy director on a variety of consumer financial topics.
                     </p>
                     <a class="jump-link jump-link__right"
                        href="/blog/?filter_author=Steve+Antonakes">
-                        Blogs with the deputy director
+                        Browse blogs by the deputy director
                     </a>
                 </div>
                 <div class="content-l_col content-l_col-1-3">
@@ -122,11 +122,11 @@
                         Calendar
                     </h2>
                     <p class="short-desc">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.
+                        See how the deputy director spends his time working for consumers.
                     </p>
                     <a class="jump-link jump-link__right"
                        href="{{ vars.path + 'leadership-calendar/' }}">
-                        View Deputy Director Antonakes' calendar
+                        View the deputy director’s public calendar
                     </a>
                 </div>
             </div>
