Fixes issue caused by New Author taxonomy

--- a/events/_vars-events.html
+++ b/events/_vars-events.html
@@ -13,7 +13,7 @@
   'taxonomy_post_format': [],
   'attachments': [],
   'excerpt': 'THIS IS THE EXCERPT Today, we’re posting a semi-annual update of our rulemaking agenda.',
-  'taxonomy_author': [],
+  'taxonomy_fj_author': [],
   'id': 61737.0,
   'custom_fields': {},
   'category': ['Announcements & updates'],
