--- a/budget/performance-plan-report/index.html
+++ b/budget/performance-plan-report/index.html
@@ -3,7 +3,7 @@
 {% set active_nav_id = 'performance-plan-report' %}
 
 {% block title -%}
-    Performance Plan Report
+    Annual Performance Plan and Report
 {%- endblock %}
 
 {% block desc -%}
@@ -14,7 +14,7 @@
 
     <div class="block block__flush-top block__sub">
         <p class="h3">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.
+            Every year, the CFPB releases an update on its goals, investment choices, and accomplishments, which align with the larger long-term Strategic Plan. The aim is to provide a balanced and transparent status update to American consumers, Congress, and other key stakeholders..
         <p>
     </div>
     <div class="block block__flush-top budget_page-content performance-plan">
