Edit on Cordray intro
It should always be "Richard" in formal descriptions.

--- a/the-bureau/index.html
+++ b/the-bureau/index.html
@@ -21,13 +21,13 @@
 {% block content_main %}
 
     <h1>Our mission</h1>
-    <p class="h3">We work to make markets for consumer financial products and services
-    work for Americans. We arm people with the information they need to make smart financial
+    <p class="h3">We work to make markets for consumer financial products and services work
+    for Americans. We arm people with the information they need to make smart financial 
     decisions, and we protect them from unfair, deceptive, and abusive practices.</p>
-    <p>Above all, this means ensuring that consumers get the information they need to make
-    the financial decisions they believe are best for themselves and their families. But
-    it also means we look out for bad actors—through regular examinations of financial
-    companies, complaints from consumers, and our own investigations—and when we find
+    <p>Above all, this means ensuring that consumers get the information they need to make 
+    the financial decisions they believe are best for themselves and their families. But 
+    it also means we look out for bad actors—through regular examinations of financial 
+    companies, complaints from consumers, and our own investigations—and when we find 
     unfair, deceptive, or abusive practices, we take action. We also:<p>
 
     <section class="bureau-mission">
@@ -135,7 +135,7 @@
     <section class="block block__padded-top u-mt0">
         <h1 class="h2">CFPB leadership</h1>
         <p class="short-desc">In January of 2012, President Barack Obama appointed
-        Rich Cordray to be the first Director of the CFPB.</p>
+        Richard Cordray to be the first Director of the CFPB.</p>
 
          <div class="block block__sub content-l content-l__main u-hide-on-mobile">
             <section class="content-l_col-1-2">
