--- a/budget/funding-request/index.html
+++ b/budget/funding-request/index.html
@@ -14,7 +14,10 @@
 
     <div class="block block__flush-top block__sub">
         <p class="h3">
-            As required by law, each fiscal quarter the Federal Reserve transfers to the CFPB the amount of funding formally requested by the Bureau director in order to carry out Bureau activities as outlined in our budget. Once the funds are transferred, the Bureau receives an acknowledgement letter from the Federal Reserve Board.
+            As required by law, each fiscal quarter the Federal Reserve transfers 
+            to the CFPB the amount of funding formally requested by the Bureau director 
+            in order to carry out Bureau activities as outlined in our budget. Once the funds are transferred, 
+            the Bureau receives an acknowledgement letter from the Federal Reserve Board.
         <p>
     </div>
     <div class="block block__flush-top budget_page-content funding-request">
