--- a/budget/strategic-plan/index.html
+++ b/budget/strategic-plan/index.html
@@ -7,7 +7,7 @@
 {%- endblock %}
 
 {% block desc -%}
-    
+
 {%- endblock %}
 
 {% block content_main %}
@@ -16,7 +16,10 @@
         Strategic Plan
     </h1>
     <p class="h3">
-        The CFPB Strategic Plan outlines four goals in pursuit of the Bureau’s mission. For each, we also describe desired outcomes, strategies and investments required, and specific measures of success. This is the work you should expect us to take on over the coming years.
+        The CFPB Strategic Plan outlines four goals in pursuit of the Bureau’s mission.
+        For each, we also describe desired outcomes, strategies and investments required,
+        and specific measures of success. This is the work you should expect us to take
+        on over the coming years.
     <p>
     <div class="block block__sub">
         <h2 class="h4">
