--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -76,7 +76,7 @@
             <div class="content-l_col
                         content-l_col-1-2">
                 <h1 class="h4 u-mb5">
-                    Request the director's speaking info
+                    Request the director&rsquo;s speaking info
                 </h1>
                 <a class="styled-link"
                    href="mailto:externalaffairs@cfpb.gov">
@@ -152,7 +152,8 @@
                         </a>
                     </figure>
                     <p class="short-desc short-desc__large">
-                        View videos of Director Richard Cordray discussing various relevant fiancial topics and how the bureau is involved.
+                        View videos of Director Richard Cordray discussing various relevant fiancial topics 
+                        and how the bureau is involved.
                     </p>
                     <a class="jump-link jump-link__external-link"
                        href="https://www.youtube.com/user/cfpbvideo/search?query=Cordray%27s+Corner">
@@ -169,7 +170,8 @@
                         <img src="../obama_cordray.jpg" alt="">
                     </figure>
                     <p class="short-desc short-desc__large">
-                        In January of 2012, President Barack Obama appointed Richard Cordray to be the first Director of the CFPB.
+                        In January of 2012, President Barack Obama appointed Richard Cordray to be the first 
+                        Director of the CFPB.
                     </p>
                     <a class="jump-link jump-link__right"
                        href="{{ vars.path + 'history/' }}">
