--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -131,7 +131,7 @@
                     </p>
                     <a class="jump-link jump-link__right"
                        href="{{ vars.path + 'leadership-calendar/' }}">
-                        View the director's public calendar
+                        View the director&rsquo;s public calendar
                     </a>
                 </div>
             </div>
