Updated Lorem content at /financial-report

--- a/budget/financial-report/index.html
+++ b/budget/financial-report/index.html
@@ -15,7 +15,10 @@
     <div class="block block__flush-top block__sub">
         <h1>Financial Report & Update</h1>
         <p class="h3">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.
+            Each fiscal year, the Chief Financial Officer releases a report on the Bureau’s finances.
+            This report analyzes how we allocate funds and how we’ve done at meeting our stated goals for
+            the year. We include financial statements and audit findings. Between annual reports, we
+            also publish quarterly updates on the current state of the Bureau’s financial resources.
         <p>
     </div>
     <div class="block block__flush-top budget_page-content financial-report">
