Fixes #404 - unneeded HTML escape codes.
Fixes #404 - unneeded HTML escape codes. Not needed since page is in
utf-8.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section class="content_hero hero beta-hero">
             <h1 class="beta-hero_title">Welcome to beta.<wbr>consumerfinance.gov!</h1>
             <p class="beta-hero_desc">
-                We&rsquo;re redesigning consumerfinance.gov to make it easier to use.
+                We’re redesigning consumerfinance.gov to make it easier to use.
                 Follow our work here as we build in the open.
             </p>
         </section>
@@ -63,9 +63,9 @@
 
         <div class="wrapper content_wrapper">
             <section class="content_main">
-                <h2 class="h1">What we&rsquo;re working on</h2>
+                <h2 class="h1">What we’re working on</h2>
                 <p class="short-desc">
-                    We&rsquo;re redesigning and reorganizing, section by section,
+                    We’re redesigning and reorganizing, section by section,
                     so you can find the information you need quickly and easily, on any device.
                     These charts tell you how much of each section we've published in the new format.
                 </p>
