--- a/the-bureau/about-steve-antonakes/index.html
+++ b/the-bureau/about-steve-antonakes/index.html
@@ -72,7 +72,7 @@
             </div>
             <div class="content-l_col content-l_col-1-2">
                 <h1 class="h4 u-mb5">
-                    Request the deputy director&rsquo;s speaking info
+                    Request the deputy director’s speaking info
                 </h1>
                 <a class="styled-link"
                    href="mailto:externalaffairs@cfpb.gov">
