--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -76,7 +76,7 @@
             <div class="content-l_col
                         content-l_col-1-2">
                 <h1 class="h4 u-mb5">
-                    Request the director&rsquo;s speaking info
+                    Request the director’s speaking info
                 </h1>
                 <a class="styled-link"
                    href="mailto:externalaffairs@cfpb.gov">
@@ -131,7 +131,7 @@
                     </p>
                     <a class="jump-link jump-link__right"
                        href="{{ vars.path + 'leadership-calendar/' }}">
-                        View the director&rsquo;s public calendar
+                        View the director’s public calendar
                     </a>
                 </div>
             </div>
@@ -152,7 +152,7 @@
                         </a>
                     </figure>
                     <p class="short-desc short-desc__large">
-                        View videos of Director Richard Cordray discussing various relevant fiancial topics 
+                        View videos of Director Richard Cordray discussing various relevant fiancial topics
                         and how the bureau is involved.
                     </p>
                     <a class="jump-link jump-link__external-link"
@@ -170,7 +170,7 @@
                         <img src="../obama_cordray.jpg" alt="">
                     </figure>
                     <p class="short-desc short-desc__large">
-                        In January of 2012, President Barack Obama appointed Richard Cordray to be the first 
+                        In January of 2012, President Barack Obama appointed Richard Cordray to be the first
                         Director of the CFPB.
                     </p>
                     <a class="jump-link jump-link__right"
