Fixes DF-broken images
- Fixes DF-broken images.
- Moves images to absolute URLs.
- Adds missing alt attribute values.

--- a/newsroom/press-resources/index.html
+++ b/newsroom/press-resources/index.html
@@ -123,7 +123,7 @@
 
             <section class="contact-person contact-person__director content-l_col-1-2">
                 <img class="contact-person_photo"
-                     src="cordray_round_360.jpg"
+                     src="/static/img/cordray_round_360.jpg"
                      alt=""
                      width="180">
                 <div class="contact-person_title">Director</div>
@@ -137,13 +137,13 @@
                     </li>
                     <li class="list_item">
                         <a class="list_link jump-link jump-link__download"
-                           href="201402_cfpb_photo_richard-cordray_high-res.jpg">
+                           href="/static/img/201402_cfpb_photo_richard-cordray_high-res.jpg">
                             High-res portrait
                         </a>
                     </li>
                     <li class="list_item">
                         <a class="list_link jump-link jump-link__download"
-                           href="201402_cfpb_photo_richard-cordray_low-res.jpg">
+                           href="/static/img/201402_cfpb_photo_richard-cordray_low-res.jpg">
                             Low-res portrait
                         </a>
                     </li>
@@ -152,7 +152,7 @@
 
             <section class="contact-person contact-person__director content-l_col-1-2">
                 <img class="contact-person_photo"
-                     src="antonakes_round_360.jpg"
+                     src="/static/img/antonakes_round_360.jpg"
                      alt=""
                      width="180">
                 <div class="contact-person_title">Deputy Director</div>
@@ -166,13 +166,13 @@
                     </li>
                     <li class="list_item">
                         <a class="list_link jump-link jump-link__download"
-                           href="201405_cfpb_photo_steve-antonakes_high-res.jpg">
+                           href="/static/img/201405_cfpb_photo_steve-antonakes_high-res.jpg">
                             High-res portrait
                         </a>
                     </li>
                     <li class="list_item">
                         <a class="list_link jump-link jump-link__download"
-                           href="201405_cfpb_photo_steve-antonakes_low-res.jpg">
+                           href="/static/img/201405_cfpb_photo_steve-antonakes_low-res.jpg">
                             Low-res portrait
                         </a>
                     </li>
@@ -202,7 +202,7 @@
                 marketplace.</p>
 
             <figure class="press-logo_logo">
-                <img src="CFPB_2Tone_isolated_RGB_352.png" alt="CFPB logo" width="176">
+                <img src="/static/img/CFPB_2Tone_isolated_RGB_352.png" alt="CFPB logo" width="176">
             </figure>
 
         </div><!-- END .content-l -->
