--- a/the-bureau/index.html
+++ b/the-bureau/index.html
@@ -141,7 +141,7 @@
             <section class="content-l_col-1-2">
                 <div class="media bureau-bio">
                     <div class="media_image-container">
-                        <img class="media_image" src="../static/img/cordray_round_360.jpg">
+                        <img class="media_image" src="/static/img/cordray_round_360.jpg">
                     </div>
                     <div class="media_body">
                         <h1 class="h6">Director</h1>
@@ -196,7 +196,7 @@
         <h1 class="h2 bureau-history_header">CFPB history</h1>
         <div class="media">
             <div class="media_image-container media_image-container__wide-margin">
-                <img class="media_image bureau-history_image" src="obama_cordray.jpg">
+                <img class="media_image bureau-history_image" src="/static/img/obama_cordray.jpg" alt="Director Richard Cordray shaking hands with President Barack Obama">
             </div>
             <div class="media_body">
                 <div class="bureau-history_text">
