--- a/newsroom/index.html
+++ b/newsroom/index.html
@@ -43,7 +43,7 @@
             <div class="content-l content-l__main">
                 <div class="block__sub content-l_col content-l_col-1-2">
                     <p class="short-desc">
-                        Subscribe to our email newsletter. We will update you on new newsroom updates.
+                        Subscribe to get our press releases by email.
                     </p>
                     {% import "email-subscribe-form.html" as subscribe with context %}
                     {{ subscribe.render(vars.query) }}
