Paragraph to distinguish consumer contact info
Tried to avoid the word "consumer" here since we know people don't think of themselves that way unprompted (and this page doesn't really contain prompts to change that.)

--- a/newsroom/press-resources/index.html
+++ b/newsroom/press-resources/index.html
@@ -24,9 +24,13 @@
 
         <p class="press-section_intro press-contacts_intro">
             We are committed to engaging with the public and members of the media regularly
-            with accurate and up-to-date information on our work. News media should use
-            this information to reach our Office of Communications. For other questions,
-            see <a href="/contact-us/">Contact Us</a>.
+            with accurate and up-to-date information on our work.
+        </p>
+        
+        <p class="press-section_intro press-contacts_intro">
+            To report an issue you're having with a financial company, please call 
+            <a href="tel:8554112372">(855) 411-CFPB (2372)</a>. News media should use the 
+            information below to reach our Office of Communications.
         </p>
 
         <ul class="press-contacts_main-contact-list list list__links list__icons">
