Email signup fix to mirror main newsroom fix
Same language.

--- a/newsroom/press-resources/index.html
+++ b/newsroom/press-resources/index.html
@@ -228,7 +228,7 @@
                 </h1>
                 <div class="block block__sub u-mt0">
                     <p class="short-desc">
-                        Subscribe to our email newsletter. We will update you on new blogs.
+                        Subscribe to get our press releases by email.
                     </p>
                     {% import "email-subscribe-form.html" as subscribe with context %}
                     {{ subscribe.render(vars.query) }}
