Curly quote in intro

--- a/newsroom/press-resources/index.html
+++ b/newsroom/press-resources/index.html
@@ -28,7 +28,7 @@
         </p>
         
         <p class="press-section_intro press-contacts_intro">
-            To report an issue you're having with a financial company, please call 
+            To report an issue you’re having with a financial company, please call 
             <a href="tel:8554112372">(855) 411-CFPB (2372)</a>. News media should use the 
             information below to reach our Office of Communications.
         </p>
