bugfix-corrected email link href

--- a/newsroom/press-resources/index.html
+++ b/newsroom/press-resources/index.html
@@ -35,7 +35,7 @@
 
         <ul class="press-contacts_main-contact-list list list__links list__icons">
             <li class="list_item">
-                <a class="list_link" href="mailto:inquiries@cfpb.gov">
+                <a class="list_link" href="mailto:inquiries@consumerfinance.gov">
                     <span class="cf-icon cf-icon-email list_icon"></span>
                     press@consumerfinance.gov
                 </a>
