Fixing typo - "learn about out projects"

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                 <li class="list_item">
                                     <a class="list_link jump-link jump-link__external-link"
                                        href="https://cfpb.github.io/">
-                                        Learn about out projects at CFPB Open Tech
+                                        Learn about our projects at CFPB Open Tech
                                     </a>
                                 </li>
                                 <li class="list_item">
