--- a/newsroom/press-resources/index.html
+++ b/newsroom/press-resources/index.html
@@ -26,10 +26,10 @@
             We are committed to engaging with the public and members of the media regularly
             with accurate and up-to-date information on our work.
         </p>
-        
+
         <p>
-            To report an issue you’re having with a financial company, please call 
-            <a href="tel:8554112372">(855) 411-CFPB (2372)</a>. News media should use the 
+            To report an issue you’re having with a financial company, please call
+            <a href="tel:8554112372">(855) 411-CFPB (2372)</a>. News media should use the
             information below to reach our Office of Communications.
         </p>
 
@@ -37,13 +37,13 @@
             <li class="list_item">
                 <a class="list_link" href="mailto:inquiries@consumerfinance.gov">
                     <span class="cf-icon cf-icon-email list_icon"></span>
-                    press@consumerfinance.gov
+                    <span class="list_text">press@consumerfinance.gov</span>
                 </a>
             </li>
             <li class="list_item">
                 <a class="list_link" href="tel:2024357170">
                     <span class="cf-icon cf-icon-phone list_icon"></span>
-                    (202) 435-7170
+                    <span class="list_text">(202) 435-7170</span>
                 </a>
             </li>
         </ul>
