Fixed featured topic links
- links were missing jump-link and right styles

--- a/newsroom/featured-topic.html
+++ b/newsroom/featured-topic.html
@@ -23,7 +23,7 @@
                 {% for link in post.links %}
                     <li class="list_item">
                         <!-- <span class="category-slug_icon cf-icon cf-icon-bullhorn"></span> -->
-                        <a class="list_link"
+                        <a class="list_link jump-link jump-link__right"
                            href="{{ link[0] }}">
                            {{ link[1] }}
                        </a>
