Fixes DF-1681 - adds livestream icon
- Updates cf-icons to 0.5.0.
- Adds livestream icon to event detail page.
- Regenerates assets.

--- a/events/_event.html
+++ b/events/_event.html
@@ -73,7 +73,7 @@
                     <div class="event-status_livestream">
                       <p>
                           {# TODO Change to livestream icon when that's added to cf-icons. #}
-                          <span class="cf-icon cf-icon-wifi"></span>
+                          <span class="cf-icon cf-icon-livestream"></span>
                           <strong>Available on Live stream.</strong>
                       </p>
                       <p class="event-meta">
