--- a/newsroom/index.html
+++ b/newsroom/index.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </section>
-        <div class="block u-mb0 block__flush-sides block__bg">
+        <div class="block u-mb0 block__flush-sides block__bg related_content">
             <div class="content-l content-l__main">
                 <section class="block u-mt0 content-l_col content-l_col-1-2">
                     {% import "related-links.html" as related_links %}
