Fix for Bureau page typo

--- a/the-bureau/index.html
+++ b/the-bureau/index.html
@@ -186,7 +186,7 @@
             </li>
             <li class="list_item">
                 <a class="list_link jump-link jump-link__right" href="bureau-structure">
-                    Organizaitonal structure and leadership
+                    Organizational structure and leadership
                 </a>
             </li>
         </ul>
