--- a/the-bureau/index.html
+++ b/the-bureau/index.html
@@ -22,13 +22,13 @@
 
     <h1>Our mission</h1>
     <p class="h3">We work to make markets for consumer financial products and services work
-    for Americans. We arm people with the information they need to make smart financial 
+    for Americans. We arm people with the information they need to make smart financial
     decisions, and we protect them from unfair, deceptive, and abusive practices.</p>
-    <p>Above all, this means ensuring that consumers get the information they need to make 
-    the financial decisions they believe are best for themselves and their families. But 
-    it also means we look out for bad actors—through regular examinations of financial 
-    companies, complaints from consumers, and our own investigations—and when we find 
-    unfair, deceptive, or abusive practices, we take action. We also:<p>
+    <p>Above all, this means ensuring that consumers get the information they need to make
+    the financial decisions they believe are best for themselves and their families. But
+    it also means we look out for bad actors—through regular examinations of financial
+    companies, complaints from consumers, and our own investigations—and when we find
+    unfair, deceptive, or abusive practices, we take action. We also:</p>
 
     <section class="bureau-mission">
 
@@ -186,7 +186,7 @@
             </li>
             <li class="list_item">
                 <a class="list_link jump-link jump-link__right" href="bureau-structure">
-                    Organizaitonal structure and leadership
+                    Organizational structure and leadership
                 </a>
             </li>
         </ul>
