--- a/govdelivery-subscribe/error/index.html
+++ b/govdelivery-subscribe/error/index.html
@@ -19,7 +19,7 @@
         <li>Check back often to follow our progress.</li>
         <li>Sign up for general CFPB updates at <a href="http://www.consumerfinance.gov">www.consumerfinance.gov</a>.</li>
     </ol>
-    <!-- Commented out until email signup is ready to use.
+    <!-- TODO: Commented out until email signup is ready to use.
     <h1><span class="cf-icon cf-icon-error-round"></span> Please try again.</h1>
     <p class="short-desc">
         Your subscription was not successfully received.<br>
