Added full width button modifier
- useful for small screens where a button should fill the space
left to right
- added to cf-enhancements for testing purposes, should be
integrated with cf-buttons in the future

--- a/contact-us/contact-list.html
+++ b/contact-us/contact-list.html
@@ -22,7 +22,7 @@
                 <button class="js-type-and-filter_button btn btn__super">Filter</button>
             </div>
         </div>
-        
+
         <div class="helpful-terms">
             <span class="helpful-terms_header">Helpful filter terms:</span>
             <button class="btn btn__link js-helpful-term">Regulations</button>
@@ -33,7 +33,7 @@
 
         <p class="type-and-filter_message js-type-and-filter_message"></p>
 
-        <button class="btn btn__super btn__secondary u-js-only contact-list_btn"
+        <button class="btn btn__super btn__secondary btn__full u-js-only contact-list_btn"
                 id="contact-list_btn">
             Show all contacts
         </button>
