Fixes DF-1620 - adds request a speaker page
Fixes DF-1620 - adds request a speaker page.

--- a/events/_vars-events.html
+++ b/events/_vars-events.html
@@ -3,7 +3,8 @@
 {% set rss_path = '/feed/events/' %}
 {% set nav_items = [
     (path, 'index', 'Upcoming events and field hearings'),
-    (path + 'archive/', 'archive', 'Archive')
+    (path + 'archive/', 'archive', 'Archive'),
+    (path + 'request-a-speaker/', 'request-a-speaker', 'Request a speaker')
 ]
 %}
 
