Doing Business with Us stakeholder edits 2
Making a language change on the DBWU main page to mirror the internal edit.

--- a/doing-business-with-us/index.html
+++ b/doing-business-with-us/index.html
@@ -83,8 +83,8 @@
                     near future.
                 </p>
                 <a class="jump-link jump-link__right" href="future-requests/">
-                    <span class="jump-link_text">See a timetable of expected future procurement
-                        opportunities</span>
+                    <span class="jump-link_text">See a timetable of upcoming procurement
+                        needs</span>
                 </a>
             </div>
         </div>
