Changing active nav ID

--- a/doing-business-with-us/future-requests/index.html
+++ b/doing-business-with-us/future-requests/index.html
@@ -1,6 +1,6 @@
 {% extends "layout-side-nav.html" %}
 {% import "_vars-doing-business-with-us.html" as vars with context %}
-{%- set active_nav_id = 'future-requests' -%}
+{%- set active_nav_id = 'upcoming-procurement-needs' -%}
 
 {% block title -%}
     Doing Business with Us: Upcoming Procurement Needs
