--- a/doing-business-with-us/index.html
+++ b/doing-business-with-us/index.html
@@ -82,7 +82,7 @@
                     We publish a list of any significant vendor services we expect to need in the
                     near future.
                 </p>
-                <a class="jump-link jump-link__right" href="future-requests/">
+                <a class="jump-link jump-link__right" href="upcoming-procurement-needs/">
                     <span class="jump-link_text">See a timetable of upcoming procurement
                         needs</span>
                 </a>
