--- a/doing-business-with-us/_future-block.html
+++ b/doing-business-with-us/_future-block.html
@@ -5,7 +5,7 @@
         We provide a list of significant procurement requests
         we expect to make in the near future.
     </p>
-    <a class="jump-link jump-link__right" href="/doing-business-with-us/future-requests/">
-        <span class="jump-link_text">More information on future requests</span>
+    <a class="jump-link jump-link__right" href="/doing-business-with-us/upcoming-procurement-needs/">
+        <span class="jump-link_text">More information on upcoming requests</span>
     </a>
 </section>
