Update cf-layout styles
- Fixes DF-1750, specifically:
- adds `block__border` to `cf-enhancements.less` to provide border on
all sides of blocks.
- Changes background of blocks to 5% gray.
- Updates cf-layout to 0.3.0. to allow use of color brand overrides.
- Normalizes order of stacked block classes.
- Regenerates assets.

--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -34,7 +34,11 @@
 
     {# Footer #}
     <aside>
-        <div class="block u-mb0 block__flush-sides block__bg related_content">
+        <div class="u-mb0
+                    block
+                    block__bg
+                    block__flush-sides
+                    related_content">
             <div class="content-l content-l__main">
                 <section class="block u-mt0 content-l_col content-l_col-1-2">
                     {% import "related-links.html" as related_links %}
