--- a/the-bureau/index.html
+++ b/the-bureau/index.html
@@ -78,13 +78,13 @@
 
     </section><!-- END .bureau-mission -->
 
-    <section class="block
-                    block__flush-sides
-                    u-mb0
+    <section class="u-mb0
                     u-mt0
+                    block
                     block__bg
-                    block__border-top
-                    block__border-bottom">
+                    block__border
+                    block__flush-sides
+                    ">
         <h1 class="h2">Our core functions</h1>
         <p>Congress created the CFPB to create a single point of accountability for enforcing
         federal consumer financial laws and protecting consumers in the financial marketplace.
