--- a/events/index.html
+++ b/events/index.html
@@ -34,7 +34,7 @@
     {% if show_hero %}
         {% import "sidenav.html" as sidenav %}
         {{ sidenav.render(
-            vars.nav_items, 
+            vars.nav_items,
             'index',
             'u-show-on-mobile u-mb0'
         ) }}
@@ -72,7 +72,11 @@
 
     {# Footer #}
     <aside>
-        <div class="block u-mb0 block__flush-sides block__bg">
+        <div class="u-mb0
+                    block
+                    block__bg
+                    block__flush-sides
+                    ">
             <div class="content-l content-l__main">
                 <section class="u-mb20 content-l_col content-l_col-1-2">
                     <div class="u-mb30">
