--- a/events/request-a-speaker/index.html
+++ b/events/request-a-speaker/index.html
@@ -29,19 +29,20 @@
 
     <section class="block
                     block__bg
-                    block__border-top
-                    block__border-bottom
+                    block__border
+                    block__flush-sides
                     block__business-step_container
-                    block__flush-sides">
+                    ">
         <h1 class="h2">Getting started</h1>
         <div class="content-l content-l__main">
-            <div class="block
-                        block__border-bottom
-                        block__business-step
-                        block__padded-bottom
+            <div class="content-l_col
+                        content-l_col-1-3
+                        block
                         block__flush-top
-                        content-l_col
-                        content-l_col-1-3">
+                        block__border-bottom
+                        block__padded-bottom
+                        block__business-step
+                        ">
                 <h2 class="h4">
                     <span class="step-slug
                                 char-icon
@@ -61,12 +62,13 @@
                 </a>
             </div>
 
-            <div class="block
+            <div class="content-l_col
+                        content-l_col-1-3
+                        block
                         block__border-bottom
-                        block__business-step
                         block__padded-bottom
-                        content-l_col
-                        content-l_col-1-3">
+                        block__business-step
+                        ">
                 <h2 class="h4">
                     <span class="step-slug
                                 char-icon
