--- a/newsroom/press-resources/index.html
+++ b/newsroom/press-resources/index.html
@@ -191,8 +191,12 @@
         </a>
 
     </section><!-- END .press-section.press-photos-bios -->
-    
-    <aside class="block block__bg block__flush-sides u-mb0">
+
+    <aside class="u-mb0
+                  block
+                  block__bg
+                  block__flush-sides
+                  ">
         <div class="content-l content-l__main">
             <section class="content-l_col content-l_col-1-2">
                 <h1 class="header-slug">
