Fixed general-inquiries file name

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -18,7 +18,7 @@
                     {% include "submit-a-complaint.html" %}
                 </section>
                 <section class="content-l_col content-l_col-1-2 content-l_col__before-divider">
-                    {% include "general-inqueries.html" %}
+                    {% include "general-inquiries.html" %}
                 </section>
             </div>
         </section>
