Fixed Whistleblower CPT slug

--- a/contact-us/promoted-contacts.html
+++ b/contact-us/promoted-contacts.html
@@ -1,6 +1,8 @@
 {% from "macros.html" import format_phone as format_phone %}
 {% set accessibility_feedback = get_document('contact', 'accessibility-feedback') %}
-{% set whistleblowers = get_document('contact', 'whistleblowers') %}
+
+{% set whistleblowers = get_document('contact', 'equal-employment-opportunity-whistleblowing') %}
+
 {% set tribal_consultation = get_document('contact', 'tribal-consultation') %}
 
 <div class="block u-mb0 content-l content-l__sidebar">
