--- a/contact-us/contact-list.html
+++ b/contact-us/contact-list.html
@@ -7,7 +7,9 @@
             Looking for something more specific?
         </p>
         <p class="short-desc">
-            Type in the office, product, blah lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta cumque perspiciatis delectus ipsa illo praesentium quos omnis nemo quia itaque reprehenderit consequatur totam velit quisquam eos expedita ea sit vel.
+            We have a number of offices that work directly with the public.
+            Scroll through the list, or enter the office, product,
+            or issue you’re looking for help with and click “Filter” to narrow this list down.
         </p>
 
         <div class="input-with-btn">
