--- a/budget/financial-report/index.html
+++ b/budget/financial-report/index.html
@@ -13,7 +13,7 @@
 {% block content_main %}
 
     <div class="block block__flush-top block__sub">
-        <h1>Financial Report & Update</h1>
+        <h1>Financial Reports & Updates</h1>
         <p class="h3">
             Each fiscal year, the Chief Financial Officer releases a report on the Bureau’s finances.
             This report analyzes how we allocate funds and how we’ve done at meeting our stated goals for
