Edits for consistency
* Pluralizing title
* Capitalizing Director, per CFPB style.

--- a/budget/funding-request/index.html
+++ b/budget/funding-request/index.html
@@ -13,10 +13,10 @@
 {% block content_main %}
 
     <div class="block block__flush-top block__sub">
-        <h1>Funding Request</h1>
+        <h1>Funding Requests</h1>
         <p class="h3">
             As required by law, each fiscal quarter the Federal Reserve transfers
-            to the CFPB the amount of funding formally requested by the Bureau director
+            to the CFPB the amount of funding formally requested by the Director of the CFPB
             in order to carry out Bureau activities as outlined in our budget. Once the funds are transferred,
             the Bureau receives an acknowledgement letter from the Federal Reserve Board.
         <p>
