--- a/budget/performance-plan-report/index.html
+++ b/budget/performance-plan-report/index.html
@@ -13,12 +13,12 @@
 {% block content_main %}
 
     <div class="block block__flush-top block__sub">
-        <h1>Performance Plan Report</h1>
+        <h1>Performance Plan & Report</h1>
         <p class="h3">
             Every year, the CFPB releases an update on its goals, investment choices,
             and accomplishments, which align with the larger long-term Strategic Plan.
             The aim is to provide a balanced and transparent status update to American
-            consumers, Congress, and other key stakeholders..
+            consumers, Congress, and other key stakeholders.
         <p>
     </div>
     <div class="block block__flush-top budget_page-content performance-plan">
