Cleaning up Strategic Plan language slightly
While I was here doing other B&S content, figured I'd make this read a little more easily and with better grammar.

--- a/budget/strategic-plan/index.html
+++ b/budget/strategic-plan/index.html
@@ -17,7 +17,7 @@
     </h1>
     <p class="h3">
         The CFPB Strategic Plan outlines four goals in pursuit of the Bureau’s mission.
-        For each, we also describe desired outcomes, strategies and investments required,
+        For each, the plan also describes desired outcomes, required strategies and investments,
         and specific measures of success. This is the work you should expect us to take
         on over the coming years.
     <p>
