--- a/budget/index.html
+++ b/budget/index.html
@@ -35,7 +35,7 @@
                 <li>that works for American consumers, responsible providers, and the economy
                 as a whole.</li>
             </ul>
-            <p class="h3">We publish our budget, strategy, and updates to provide transparency and to hold 
+            <p class="h3">We publish our budget, strategy, and regular updates to provide transparency and to hold 
             ourselves accountable to the public.<p>
         </div>
     </section>
