--- a/contact-us/_vars-contact-us.html
+++ b/contact-us/_vars-contact-us.html
@@ -3,21 +3,21 @@
 {% set query = queries.contact %}
 
 {% set administrative_offices = {
-	'title'    : 'Administrative offices',
+	'title'    : 'General Inquiries',
 	'name'     : 'Consumer Financial Protection Bureau',
 	'street'   : '1700 G Street, NW',
 	'city'     : 'Washington',
 	'state'    : 'DC',
-	'zip_code' : '20552'
+	'zip_code' : '20552-0003'
   }
 %}
 
 {% set consumer_contact_center = {
-	'title'    : 'Contact Center',
+	'title'    : 'Submit a Complaint',
 	'name'     : 'Consumer Financial Protection Bureau',
-	'street'   : 'P.O. Box 4503',
+	'street'   : 'PO Box 4503',
 	'city'     : 'Iowa City',
-	'state'    : 'Iowa',
-	'zip_code' : '52244'
+	'state'    : 'IA',
+	'zip_code' : '52244-4503'
   }
 %}
